--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 			target="_blank">East Coast Greenway Alliance</a>
 			on building accessible trails and working with <a
 			href="https://www.thesuperbill.com/" class="link"
-			target="_blank">SuperBill</a> to design a better health insurance reimbursement experience.
+			target="_blank">SuperBill</a> on healthcare AI projects.
 			<!-- I'm working with 
 			<a
 			href="https://www.thesuperbill.com/" class="link"
