--- a/projects/clarative.html
+++ b/projects/clarative.html
@@ -296,10 +296,10 @@ viewBox="0 0 419.12 180.55"><defs><path id="w" d="m-419.12,120.21c71.44,0,138.12
 				<div class="content_text_no_margin">SuperBill: SuperPay</div>
 			</div>
 			<div class="sideBySideItem_isLast width_50 align_right fixed">
-				<a href="year-of-code.html" class="navigation">
+				<a href="appian.html" class="navigation">
 					<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 				</a>
-				<div class="content_text_no_margin">Year of Code</div>
+				<div class="content_text_no_margin">Appian</div>
 			</div>
 		</div>
         </div>
