--- a/uiux.html
+++ b/uiux.html
@@ -42,15 +42,12 @@
 		</div>
 		<div class="container_cards">
 			<div class="card_category">
-				<div class="card_category_title">UX & Development with a sprinkle of Illustration</div>
+				<div class="card_category_title">Scrappy yet Refined</div>
 			</br>
-				<div class="card_category_description">My journey in UX started when I joined Dartmouth's DALI Lab, an experiential learning lab where students design and develop digital solutions for folks in the Upper Valley. 
+				<div class="card_category_description">My formal journey in UX started at Appian where I designed enterprise B2B features to help customers build their websites with low-code. My work involved Dev Ops tools, data visualization, and simplifying complex topics for non-technical users. This experience, along with my work on the Design Operations and mentorship side, equipped me with a deep understanding of quality UX work and insight into growing a team.
 				</br></br>
-				Since then, I've gained experience in the UX field through my work at Appian and my side projects ranging from websites to game development, and I've sharpened my front-end development skills along the way. 
+				I then moved to SuperBill, an AI healthcare startup, where I wore many hats: designer, front-end (and then full-stack) developer, PM, QA, Marketing person.. you name it! This experience equipped me with the scrappiness to ship things quickly, to take on whatever makes sense at the time, and to make practical & fast decisions. 
 				</br></br>
-				<!-- I've also become extremely passionate about diversity and inclusivity in the tech space, which I've been able to further explore in product illustrations. -->
-				<!-- </br></br> -->
-				I've found that I emphasize pragmatism in my approach, and simplicity (with a hint of playfulness) in my designs. I'm still learning and still growing, and I'm so excited to see what impactful problems we can solve with thoughtful user experience.
 			</div>
 			</div>
 			<a href="projects/superdial.html" class="card">
@@ -84,6 +81,14 @@
 						<div class="card_tag web">Webflow</div>
 				</div>
 			</a>
+			<a href="projects/appian.html" class="card">
+				<img class="card_image" src="assets/appian-2.png"/>
+				<div class="card_title">Appian</div>
+				<div class="card_description">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team</div>
+				<div class="card_tag_container">
+						<div class="card_tag ux">UX/UI</div>
+				</div>
+			</a>
 			<a href="projects/year-of-code.html" class="card">
 				<img class="card_image" src="assets/year-of-code-cover.png"/>
 				<div class="card_title">2024: Year of Code</div>
@@ -95,14 +100,6 @@
 					<div class="card_tag htmlcss">React</div>
 					<div class="card_tag htmlcss">Full-Stack</div>
 
-				</div>
-			</a>
-			<a href="projects/appian.html" class="card">
-				<img class="card_image" src="assets/appian-2.png"/>
-				<div class="card_title">Appian</div>
-				<div class="card_description">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team</div>
-				<div class="card_tag_container">
-						<div class="card_tag ux">UX/UI</div>
 				</div>
 			</a>
 			<!-- <a href="projects/superbill.html" class="card">
