--- a/projects/appian.html
+++ b/projects/appian.html
@@ -150,16 +150,16 @@
 	<div class="border"></div>
 	<div class="container_sideBySide"> 
 		<div class="sideBySideItem width_50 fixed">
-			<a href="year-of-code.html" class="navigation">
+			<a href="clarative.html" class="navigation">
 				<div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Previous Project</i></div>
 			</a>
-			<div class="content_text_no_margin">Year of Code</div>
+			<div class="content_text_no_margin">Clarative</div>
 		</div>
 		<div class="sideBySideItem_isLast width_50 align_right fixed">
-			<a href="trailhead2.html" class="navigation">
+			<a href="year-of-code.html" class="navigation">
 				<div class="content_text_no_margin">Next Project &nbsp <i class="fas fa-arrow-right"></i></div>
 			</a>
-			<div class="content_text_no_margin">Trailhead 2.0</div>
+			<div class="content_text_no_margin">Year of Code</div>
 		</div>
 	</div>
     </div>
