updating text in superdial

--- a/projects/superdial.html
+++ b/projects/superdial.html
@@ -99,7 +99,7 @@
                 <div class="card_category short">
                     <img class="card_image short outline" src="../assets/superdial-callcenter.png"/>
                     <strong>Call Center, Reimagined</strong>
-                    <div class="card_description">The process behind SuperDial's "Script Builder" that facilitates the AI conversation</div>
+                    <div class="card_description">Building a custom internal tool without reinventing the wheel</div>
                     <div class="no_link">Coming Soon </div>
                 <!-- <a href="projects/foca17.html" class="card short">
                     <img class="card_image short" src="assets/lakemorey.png"/>
