updated sewing project

--- a/projects/superdial-script-builder.html
+++ b/projects/superdial-script-builder.html
@@ -34,6 +34,7 @@
 <div style="padding-top: 150px;"></div>
 
 <div class="content">
+    <div class="case_study">
 	<div class="container_summary">
 		<div class="section_summary">
 			<div class="caption_container">
@@ -48,22 +49,19 @@
                 In order to place automated calls, customers must tell us what questions they want us to ask. Read about how we designed a Script Builder that transformed human conversations into a concrete formula.
                 
 			</div>
-			<a href="#container_content"><button class="button_circle_arrow" >
-				<i class="fas fa-arrow-down"></i>			
-			</button></a>
+
 			</div>
     </div>
-    <div id="container_content" style="padding-top: 150px;"></div>
 	<div class="container_content_stack vertical">
         <div class="card_title">Problem</div>
-        <div class="container_callout content_text block">
+        <div class="container_callout content_text block outline">
             Devise a "formula" for customers to describe the answers they need from the automated calls, and make this solution work for a wide range of call complexities. The solution must also be easily understood by our AI "brain".
         </div>
         </br>
         </br></br>
         <div class="card_title">User Research</div>
         <div class="content_text">
-            <img class="summary_image" src="../assets/superdial-urimages.png"/>
+            <img class="summary_image outline" src="../assets/superdial-urimages.png"/>
             Customers came to us with the full gambit of ways in which they standardized their calls. Provider offices might have a literal script, prescribing exactly what the receptionist should say down to the call introduction. Larger healthcare Revenue Cycle Management (RCM) companies, on the other hand, came to us with  their own form-filling system, and yet others just entered relevant information into a Practice Management Software without utilizing a "script". 
 
         </div>
@@ -96,18 +94,19 @@
             <br/>
         </div>
         </br>
-        <div class="border"></div>
-                <div class="container_sideBySide"> 
-                    <div class="sideBySideItem width_50 fixed">
-                        <a href="superdial.html" class="navigation">
-                            <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Back to SuperDial</i></div>
-                        </a>
-                    </div>
-                        <div class="sideBySideItem width_50 fixed">
-                        </div>
-                    </div>
+    </div>
+    </div>
+    <div class="container_content_stack vertical">
+        <div class="container_sideBySide"> 
+            <div class="sideBySideItem width_50 fixed">
+                <a href="superdial.html" class="navigation">
+                    <div class="content_text_no_margin"><i class="fas fa-arrow-left"></i>&nbsp Back to SuperDial</i></div>
+                </a>
+            </div>
+                <div class="sideBySideItem width_50 fixed">
+            </div>
         </div>
-
+    </div>
 
     </div>
 </div>
