--- a/uiux.html
+++ b/uiux.html
@@ -53,7 +53,7 @@
 			<a href="projects/superdial.html" class="card">
 				<img class="card_image outline" src="assets/superdial-marketing.jpeg"/>
 				<div class="card_title">SuperBill: SuperDial</div>
-				<div class="card_description">Designing an automated AI healthcare phone caller</div>
+				<div class="card_description"><strong>AI Healthcare Startup</strong> | Designing an automated AI healthcare phone caller</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 						<div class="card_tag htmlcss">HTML/CSS</div>
@@ -64,7 +64,7 @@
 			<a href="projects/superpay.html" class="card">
 				<img class="card_image outline" src="assets/superpay-cover.svg"/>
 				<div class="card_title">SuperBill: SuperPay</div>
-				<div class="card_description">Mostly Designing (but also Building, PM-ing, Marketing) an out-of-network claim-filing platform for patients and providers</div>
+				<div class="card_description"><strong>AI Healthcare Startup</strong> | Mostly Designing (but also Building, PM-ing, Marketing) an out-of-network claim-filing platform for patients and providers</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 						<div class="card_tag htmlcss">HTML/CSS</div>
@@ -75,7 +75,7 @@
 			<a href="projects/clarative.html" class="card">
 				<img class="card_image outline" src="assets/clarative-cover.png"/>
 				<div class="card_title">Clarative</div>
-				<div class="card_description">Designing an AI, natural language data analytics platform</div>
+				<div class="card_description"><strong>AI Data Analytics Startup</strong> | Designing an AI, natural language data analytics platform</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 						<div class="card_tag web">Webflow</div>
@@ -84,7 +84,7 @@
 			<a href="projects/appian.html" class="card">
 				<img class="card_image" src="assets/appian-2.png"/>
 				<div class="card_title">Appian</div>
-				<div class="card_description">Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team</div>
+				<div class="card_description"><strong>Enterprise Low-Code App Builder</strong> | Designing features for the platform's DevOps capabilities, advocating for UX best practices on Customer Success projects, and leading a pretty cool product illustration team</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 				</div>
@@ -92,7 +92,7 @@
 			<a href="projects/year-of-code.html" class="card">
 				<img class="card_image" src="assets/year-of-code-cover.png"/>
 				<div class="card_title">2024: Year of Code</div>
-				<div class="card_description">I'm on a learning quest to (design and) develop 4 mini apps of increasing complexity in 2024.</div>
+				<div class="card_description"><strong>Personal Project</strong> | I'm on a learning quest to (design and) develop 4 mini apps of increasing complexity in 2024.</div>
 				<div class="card_tag_container">
 					<div class="card_tag ux">UX/UI</div>
 					<div class="card_tag htmlcss">HTML/CSS</div>
@@ -114,8 +114,8 @@
 			</a> -->
 			<a href="projects/trailhead2.html" class="card">
 				<img class="card_image" src="assets/trailhead23.png"/>
-				<div class="card_title">Trailhead 2.0</div>
-				<div class="card_description">Second Time's the Charm! A redesign of the beloved original to upgrade user experience and add some "crunchy" personality</div>
+				<div class="card_title"> Trailhead 2.0</div>
+				<div class="card_description"><strong>Student Trip Management Platform</strong> |Second Time's the Charm! A redesign of the beloved original to upgrade user experience and add some "crunchy" personality</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 					</div>
@@ -131,7 +131,7 @@
 			<a href="projects/trailhead.html" class="card">
 				<img class="card_image" src="assets/trailhead-cover.jpg"/>
 				<div class="card_title">Trailhead</div>
-				<div class="card_description">A platform for students and staff of the Dartmouth Outing Club to explore, plan, and sign up for trips</div>
+				<div class="card_description"><strong>College Project</strong> | A platform for students and staff of the Dartmouth Outing Club to explore, plan, and sign up for trips</div>
 				<div class="card_tag_container">
 						<div class="card_tag ux">UX/UI</div>
 					</div>
@@ -139,7 +139,7 @@
 			<a href="projects/phoenix.html" class="card">
 				<img class="card_image" src="assets/pb-cover.jpg"/>
 				<div class="card_title">Phoenix Bikes</div>
-				<div class="card_description">Website re-design for a local DC non-profit during AIGA's 24-hour CreateAthon challenge</div>
+				<div class="card_description"><strong>Volunteer Project</strong> | Website re-design for a local DC non-profit during AIGA's 24-hour CreateAthon challenge</div>
 				<div class="card_tag_container">
 						<div class="card_tag web">Wordpress</div>
 						<div class="card_tag ux">UX/UI</div>
@@ -148,7 +148,7 @@
 			<a href="projects/meexarps.html" class="card">
 				<img class="card_image" src="assets/meexarps.jpg"/>
 				<div class="card_title">Meexarps</div>
-				<div class="card_description">A party game where the goal is to learn about your friends</div>
+				<div class="card_description"><strong>Personal Project</strong> | A party game where the goal is to learn about your friends</div>
 				<div class="card_tag_container">
 					<div class="card_tag htmlcss">HTML/CSS</div>
 					<div class="card_tag htmlcss">Unity</div>
@@ -158,7 +158,7 @@
 			<a href="projects/shesacoder.html" class="card">
 				<img class="card_image" src="assets/cs52-cover.jpg"/>
 				<div class="card_title">Full-Stack Web Dev</div>
-				<div class="card_description">Projects from CS52: Full-Stack Web Dev where I super-powered my UX skills by gaining a better understanding of React, HTML/CSS and Javascript</div>
+				<div class="card_description"><strong>College Project</strong> | Projects from CS52: Full-Stack Web Dev where I super-powered my UX skills by gaining a better understanding of React, HTML/CSS and Javascript</div>
 				<div class="card_tag_container">
 					<div class="card_tag htmlcss">HTML/CSS</div>
 					<div class="card_tag htmlcss">Javascript</div>
@@ -168,7 +168,7 @@
 			<a href="projects/metamuch.html" class="card">
 				<img class="card_image" src="assets/site-cover.png"/>
 				<div class="card_title">Personal Site</div>
-				<div class="card_description">A self-critique and lessons learned behind designing and coding this website</div>
+				<div class="card_description"><strong>Personal Project</strong> | A self-critique and lessons learned behind designing and coding this website</div>
 				<div class="card_tag_container">
 					<div class="card_tag htmlcss">HTML/CSS</div>
 					<div class="card_tag htmlcss">Javascript</div>
