--- a/projects/projrunway.html
+++ b/projects/projrunway.html
@@ -137,8 +137,8 @@
 		<br/><br/>
 		<div class="card_title">The Madness Dress: a figure skating dress for my brief dive into adult competitions</div>
 			<div class="content_text">I used mesh and spandex to make a custom figure skating dress for my program to Muse's Madness. I designed an A-Line mesh skirt with side slits for light flowy-ness and a slight see-through-ness. I also used mesh for the body and overlayed some groovy spandex lines that form a continuous line from front to back. To finish it off and give it a bit of class (and also have someplace to put a clasp), I added a spandex mockneck. Ooh, and also some bedazzling with Swarovski crystals. Really happy with how this turned out! <br/>
-				<a href="https://www.rei.com/blog/cycle/thru-biking-the-east-coast-greenway" target="_blank" class="button_secondary">Read about my skating journey <i class="fas fa-external-link-square-alt"></i></a>
-				<a href="https://www.rei.com/blog/cycle/thru-biking-the-east-coast-greenway" target="_blank" class="button_secondary">Watch my sectionals competition <i class="fas fa-external-link-square-alt"></i></a>	
+				<a href="foca17.html" target="_blank" class="button_secondary">Read about my skating journey</i></a>
+				<a href="https://www.youtube.com/watch?v=mUy5Mdf8MiI" target="_blank" class="button_secondary">Watch my sectionals competition <i class="fas fa-external-link-square-alt"></i></a>	
 			</div>
 			<img class="summary_image" src="../assets/skating_dress.PNG"/>
 			<div class="container_sideBySide"> 
