--- a/donate.html
+++ b/donate.html
@@ -87,6 +87,10 @@
 								<img class="summary_image" src="assets/ecga-dc.jpeg"/>
 								<div class="image_text"><b>Washington, DC |  </b>Mount Vernon Trail</div>
 						</div>
+						<div class="sideBySideItem width_50">
+							<img class="summary_image" src="assets/ecga-nc.jpeg"/>
+							<div class="image_text"><b>North Carolina |  </b>American Tobacco Trail</div>
+					</div>
 
 							<!-- <div class="sideBySideItem width_33 sideBySideItem_isLast">
 									
