updating postcard images

--- a/donate.html
+++ b/donate.html
@@ -72,23 +72,23 @@
                         </div>
 						<div class="container_sideBySide"> 
 							<div class="sideBySideItem width_50">
-									<img class="summary_image" src="assets/ecga-connecticut.jpeg"/>
+									<img class="summary_image" src="assets/ecga_ct.png"/>
 									<div class="image_text"><b>Connecticut |  </b>Farmington Canal Trail</div>
 							</div>
 							<div class="sideBySideItem width_50 sideBySideItem_isLast">
-									<img class="summary_image" src="assets/ecga-newyork.png"/>
+									<img class="summary_image" src="assets/ecga_ny.png"/>
 									<div class="image_text"><b>New York |  </b>Hudson River Greenway</div>
 							</div>
 							<div class="sideBySideItem width_50">
-								<img class="summary_image" src="assets/ecga-penn.jpeg"/>
+								<img class="summary_image" src="assets/ecga_pa.png"/>
 								<div class="image_text"><b>Pennsylvania |  </b>Schuylkill River Trail</div>
 						</div>
 						<div class="sideBySideItem width_50 sideBySideItem_isLast">
-								<img class="summary_image" src="assets/ecga-dc.jpeg"/>
+								<img class="summary_image" src="assets/ecga_dc.png"/>
 								<div class="image_text"><b>Washington, DC |  </b>Mount Vernon Trail</div>
 						</div>
 						<div class="sideBySideItem width_50">
-							<img class="summary_image" src="assets/ecga-nc.jpeg"/>
+							<img class="summary_image" src="assets/ecga_nc.png"/>
 							<div class="image_text"><b>North Carolina |  </b>American Tobacco Trail</div>
 					</div>
 
