--- a/donate.html
+++ b/donate.html
@@ -42,6 +42,9 @@
 			<div class="summary_title">Regina’s Fundraising for the East Coast Greenway Alliance</div>
 			<br/>
 			<div class="summary_description"> 
+				<div class="container_callout bg_red block padding_more margin_bottom_more">
+                    <div class="header_sm bold">Not fulfilling orders June 20 - October 31, 2024 due to LOTS of travelling!</div>
+                </div>
                 <div class="container_callout block padding_more margin_bottom_more">
                     <div class="header_sm bold margin_bottom">How to Donate</div>
                     <div class="flex align_top margin_bottom">
