--- a/projects/clarative.html
+++ b/projects/clarative.html
@@ -152,9 +152,9 @@
 	<div class="container_content_stack vertical">
         <div class="card_title">My role</div>
         <div class="container_callout content_text block">
-            I was essentially the <strong>founding designer</strong> by helping out part-time at Clarative. I handled the design of the application and marketing pages, and worked with the founders on user research and product direction.
+            I was the <strong>first designer</strong> helping out part-time at Clarative. I handled the design of the application and marketing pages, and worked with the founders on user research and product direction.
             <br/><br/>
-            <strong>Note: I cannot share product work due to NDA, so this page will feature my marketing work.</strong>
+            <strong>Note: this page currently only features my marketing site work.</strong>
 
         </div>
         </br>
